Workaround for NoSuchMethodError: java.math.BigDecimal.<init>(I)V that occurs when using a RAP target that was created by build server